add bg placeholder gif.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="text/javascript" href="assets/javascript/game.js">
     <title>Crystal Collector</title>
 </head>
-<body>
+<body style="background-image: url(https://media.giphy.com/media/l3q2YNSpGHvy3XVbq/giphy.gif); background-repeat: no-repeat; background-size: 100%;">
 
     <div class="container">
         <div class="row">
