fix bg image position.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="text/javascript" href="assets/javascript/game.js">
     <title>Crystal Collector</title>
 </head>
-<body style="background-image: url(https://media.giphy.com/media/l3q2YNSpGHvy3XVbq/giphy.gif); background-repeat: no-repeat; background-size: 100%;">
+<body style="background-image: url(https://media.giphy.com/media/3o6ZsWM1whmeiNMTCw/giphy.gif); background-repeat: no-repeat; background-size: 60%; background-position:top, center; border: magenta; border-width: 100px;">
 
     <div class="container">
         <div class="row">
