fix card positioning.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <div class="container">
         <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-3">
+            <div class="card" style="width: 15rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -53,8 +53,8 @@
                 </div>
               </div>
           </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-3">
+            <div class="card" style="width: 15rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -63,8 +63,18 @@
                 </div>
               </div>
           </div>
-          <div class="col-sm">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-3">
+            <div class="card" style="width: 15rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card" style="width: 15rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -74,6 +84,7 @@
               </div>
           </div>
         </div>
+        
         <div class="row">
             <div class="col-sm">
                 <div class="card" style="width: 18rem;">
