add var for gems + random number. Add variables for wins, losses, and guess total.

--- a/index.html
+++ b/index.html
@@ -46,21 +46,19 @@
         <div class="row d-flex justify-content-center">
             <div class="col-sm-6">
                 <div class="card" style="width: 12rem d-flex justify-content-center; padding: 10px;">
-                    <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">(game start)</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h5 class="card-title">Reach this number!</h5>
+                      <div id="randomnumber"></div>
                     </div>
                   </div>
             </div>
             <div class="col-sm-6">
                 <div class="card" style="width: 12rem d-flex justify-content-center; padding: 10px;">
-                    <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Score</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <p id="guesstot">Guess Total: </p>
+                      <p id="win">Wins: </p>
+                      <p id="lose">Losses: </p>
                     </div>
                   </div>
             </div>
@@ -72,7 +70,6 @@
                 <img src="assets/images/green-gem.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -82,7 +79,6 @@
                 <img src="assets/images/pink-gem.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -92,7 +88,6 @@
                 <img src="assets/images/unique-gem.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -102,7 +97,6 @@
                 <img src="assets/images/red-gem.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
